public/css/app.css
/* app css stylesheet */
html, body { 
	margin: 0;
	padding: 0;
}

/* Parents of the .noteArea need to have a height
 * of 100% if we want to use CSS for setting the
 * height of .noteArea as a percentage.
 */
html, body, .view, .container, .noteContainer {
	height: 100%;
}
body {
	/* The vertical scrollbar becomes visible otherwise 
	 * I'm sure this is an artifact of some other setting.
	 */
	height: 97%;
}
.noteContainer {
	height: 90%;
}


.view {
	padding-right: 25%;
	width: 50%;
}
.view, .menuContainer {
	padding-left: 25%;
}

.menuContainer {
	position: absolute;
	/* This makes so many things nice. */
	right: 75%;
}

.menu {
	position: relative;
	/* The top is in line with the top of the content
	 * in the noteContainer */
	top: 0;
	right: 0;
	max-width: 150px;
	
	text-align: left;
	overflow: hidden;
}

#homeItem, #backItem {
	text-align: right;
}
#backItem {
	margin-top: 3px;
}

.menuItem {
	font-family: Helvetica, Verdana;
	font-size: 10pt;
}
.menuItem a {
	color: #aaa;
	text-decoration: none;
}
.menuItem a:hover {
	color: #444;
	text-decoration: underline;
}
.menuItemLink {
	padding: 2px;
}
.menuItemLink:hover {
	background-color: #f6f6f6;
}

.hidden {
	visibility: hidden;
}

.noteContainer {
	border: solid 1px;
	border-top: none;
	border-bottom: none;
	border-color: #ccc;

	margin-top: 1.2em; 
	padding-top: 1.2em;

	position: relative;
	top: -1.2em;
	left: 2ex;
	width: 100%;
}

.noteArea {
	height: 90%;
	width: 100%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;

	padding: 3em;
	padding-top: 0;
	margin-right: 0;

	border: none;
	outline: none;
	resize: none;
}

.ace-container {
	width: 100%;
	height: 100%;
}
.ace_url, .ace_note-url {
	/* Ace uses pointer-events: none, which messes with 
	 * mouseover stuff unless we change it. 
	 */
	pointer-events: auto;
	cursor: pointer;
}
.ace_url:hover, .ace_note-url:hover {
	color: blue;
	text-decoration: underline;
}

/* Hack the Ace styles to hide the scrollbar,
 * and hide the inactive cursor. 
 */
.ace_scrollbar {
	display: none;
}
.ace_hidden-cursors .ace_cursor {
	border: none !important;
}


#home-icon, #back-icon {
	padding: 0;
	padding-right: 1ex;
	opacity: 0.2;
	border: none;
}
#home-icon:hover, #back-icon:hover {
	opacity: 0.7;
}

h3 {
	font-family: Helvetica, Verdana, sans-serif;
	font-weight: normal;
	font-size: 10pt;
	
	margin: 0;
	padding: 0;
	padding-bottom: 2.5em;
	padding-left: 1.75ex;
}

.authContainer input {
	border: solid 1px #ccc;
	color: #ddd;

	padding-left: 0.5ex;
	width: 10ex;
	outline: none;
}
.authContainer input:focus {
	border: solid 1px blue;
	color: #333;
}

.notesHeading {
	/* Prevents things from realigning when
	 * the editablePath input becomes visible.
	 */
	line-height: 2em;
	margin-top: -0.3em;
}
.path {
	min-width: 50ex;
	display: inline-block;
}
.path:hover {
	cursor: pointer;
	background-color: #f6f6f6;
}
.editablePath {
	display: inline-block;
}
.editablePath input {
	width: 50ex;
	outline: none;
}

